refactor: use emptyList for cleaner readability in empty book test